<resources>
	<string name="app_name">PlusAuto</string>

	<!-- Common -->
	<string name="textOK" translatable="false">OK</string>
	<string name="textClose">Close</string>
	<string name="textSearch">Search…</string>
	<string name="textUploading">Uploading…</string>

	<!-- Auth Activities -->
	<string name="activitySignup">Sign Up</string>
	<string name="activityVerification">Verification</string>
	<string name="activityRecovery">Password recovery</string>

	<string name="buttonPassRecovery">Forgotten your password?</string>

	<string name="textUserAgreementInfo">Signing up, I accept</string>
	<string name="textUserAgreement">user agreement</string>

	<string name="textVerificationSuccessMessage">Verification link has been sent on the email:</string>
	<string name="textVerificationFailedMessage">Failed to sent verification link on the email:</string>
	<string name="buttonVerificationRepeat">Send new link</string>
	<string name="buttonVerificationFinish">Finish</string>

	<string name="textSendResetPassSuccess">Reset password link has been sent on the email:\n%s</string>
	<string name="textSendResetPassFailure">Failed to sent reset password link on the email:\n%s</string>

	<string name="dialogVerificationSuccessTitle">Congratulations!</string>
	<string name="dialogVerificationMessage">You have been verified</string>
	<string name="dialogVerificationButtonEnter">Enter</string>

	<string name="dialogAgreementTitle">User agreement</string>

	<string name="hintEmail">Email</string>
	<string name="hintName">Name</string>
	<string name="hintPassword">Password</string>
	<string name="hintPassCheck">Repeat password</string>

	<string name="buttonSignup">Sign Up</string>
	<string name="buttonLogin">Log In</string>
	<string name="buttonLogOut">Log Out</string>
	<string name="buttonGotoSignup">I don\'t have an account</string>

	<string name="buttonSendResetEmail">Send reset email</string>

	<string name="errorNoInternetConnection">No internet connection</string>
	<string name="errorFieldRequired">This field is required</string>
	<string name="errorInvalidEmail">This email address is invalid</string>
	<string name="errorInvalidPassword">This password is too short (miminum 6 letters)</string>
	<string name="errorConfirmPassFailure">Passwords do not match</string>
	<string name="errorTextOrPhoto">Add either spare part or photo of it</string>

	<string name="errorAuthGeneral">Authentification failed</string>
	<string name="errorAuthCollision">User with this email already exist</string>
	<string name="errorAuthInvalidUser">No user such record. The user may have been deleted</string>
	<string name="errorAuthRecentLogin">Recent login required</string>
	<string name="errorAuthInvalidCredentials">Invalid credentials</string>
	<string name="errorAuthEmail">Email sent to Firebase Auth</string>
	<string name="errorAythDatabase">Error loading user data</string>
	<string name="errorNotVerified">Account is not verified</string>

	<!-- Main Activity -->
	<string name="fragmentClientRequestListName">My requests</string>
	<string name="fragmentClientTicketListName">My tickets</string>
	<string name="fragmentSupportTicketList">Opened tickets</string>
	<string name="fragmentSupportTicketsInProcessList">Tickets in process</string>

	<string name="textNoMessages">No messages</string>
	<string name="textNewMessagesCount">%d new messages</string>
	<string name="textMessagesCount">%d messages</string>
	<string name="textPhotoPTS">PTS photo granted</string>
	<string name="textPhotoPart">Part photo granted</string>

	<string name="textTickets">Tickets</string>
	<string name="textOffers">Offers</string>
	<string name="textOrders">Orders</string>
	<string name="textBranchesAdresses">Branches adresses</string>

	<string name="drawerOpen">Open navigation drawer</string>
	<string name="drawerClose">Close navigation drawer</string>

	<string name="textRequestDeleted">Request has been deleted</string>

	<string name="buttonCancelDeletion">Cancel deletion</string>
	<string name="buttonCreateRequestByTemplate">Create request based on this</string>

	<!-- Support Fragments -->
	<string name="buttonAnswerRequest">Answer</string>
	<string name="buttonTakeRequest">Take Request</string>
	<string name="buttonOpenChat">Open Chat</string>

	<!-- New Request Activity -->
	<string name="activityNewRequest">New Request</string>
	<string name="activityNewTicket">New Ticket</string>

	<string name="hintAutoBrand">auto brand</string>
	<string name="hintAutoModel">auto model</string>
	<string name="hintAutoYear">year</string>
	<string name="hintAutoVin">vin</string>
	<string name="hintAutoPart">spare part</string>
	<string name="hintComment">comment</string>
	<string name="hintImage">Add image</string>
	<string name="hintPTSPhoto">Certificate photo or PTS</string>

	<string name="buttonAddRequest">Add</string>

	<string name="errorInvalidField">This field is wrong</string>
	<string name="errorPhotoRequered">Photo must be uploaded</string>
	<string name="errorPhotoNotRecieved">Taking picture failed</string>

	<string name="textUploadSuccess">Upload finished</string>
	<string name="textUploadFailure">Upload failed</string>
	
	<string name="textNewRequestTextMode">With Text</string>
	<string name="textNewRequestPhotoMode">With Photo</string>

	<!-- List Activity -->
	<string name="textEmptyResult">No matches were found in the database</string>
	<string name="textAddSparePart">Use entered data</string>

	<string name="textSearchInstruction">Enter the name of %s</string>

	<string name="textSearchModel">auto model</string>
	<string name="textSearchBrand">auto brand</string>
	<string name="textSearchPart">auto spare part</string>

	<!-- Request Details Activity -->
	<string name="activityDetailTicket">Ticket</string>
	<string name="activityDetailTicketTitle">Ticket №%d</string>

	<string name="textAutoInfo" translatable="false">%1$s %2$s \'%3$s</string>
	<string name="textAutoVin" translatable="false">VIN: %s</string>

	<string name="textNoImageViewer">You don\'t have any App to open image</string>

	<!-- Chat Activity -->
	<string name="activityChat" translatable="false">Chat</string>

	<string name="hintClientName" translatable="false">Client Name</string>
	<string name="hintSupportName" translatable="false">Support Name</string>

	<string name="textMessageInfo" translatable="false"><b>%1$s</b>  %2$s</string>

	<string name="hintTextField">Type a message</string>
	<string name="buttonSend">Send</string>
	<!-- Gallery Activity -->
	<string name="activityGallery">Gallery</string>
	<string name="activityCamera">Camera</string>

	<string name="textTakePhoto">Take Photo</string>

	<string name="photoPrefix" translatable="false">Auto_plus</string>

	<!-- Query Filter Activity -->
	<string name="activityQueryFilter">Filter</string>

	<string name="queryFilterOpened">All opened</string>
	<string name="queryFilterOwn">All mine</string>
	<string name="queryFilterUnansweredFirst">Unanswered first</string>

	<!-- Permissions -->
	<string name="textRationaleTitle">Permission requered</string>
	<string name="textRationaleMessageCamera" translatable="false">To take photos, the app needs your permission to use camera and write the result to Pictures folder</string>
	<string name="textRationaleMessageStorage">To pick image from you gallery, the app needs your permission to read storage</string>
	<string name="dialogAgreementMessage" translatable="false">
Регистрируясь в приложении вы соглашаетесь с нашей политикой конфиденциальности. Ваши личные данные важны для нас и не будут переданы третьим лицам.
\n\n
Политика безопасности мобильного приложения:\n
Для корректной работы мобильного приложения ПлюсАвто, а также для обеспечения успешного взаимодействия между клиентом и поставщиком, в процессе установки, регистрация и использования мы собираем некоторую инормацию о пользователе, а также просим предоставить приложению ряд доступов.
В данном документе мы подробно опишем, какая информация требуется и для чего она используется.
\n\n
Какие разрешения запрашивает приложение:\n
Доступ к фото/мультимедия памяти, фотокамере. В процессе работы приложение может создавать/сохранять в память устройства изображения.
Они необходимы для индетефикации искомого товара. Именно для этого запрашивается доступ к соответствующим областям памяти устройста.
Приложение по умолчанию запрашивает неограниченный доступ в интернет для обеспечения максимальной функциональности.
На осонове разрешения о просмотре сетевых подключений приложение получает информацию о доступных подключениях и определяет какое из них оптимальнее использовать в данный момент.
\n\n
Какие данные запрашиваются при регистрации:\n
Имя, чтобы знать как обращаться к клиенту менеджерам нашей компании. E-mail, который используется для регистрации и восстановления пароля, при использовании соответствующей функции приложения.
\n\n
Какие данные запрашиваются/хранятся в ходе обработки запросов клиентов:\n
Чтобы качественно обрабатывать запросы клиента при подборе запчастей нам необходимо индетефицировать транспортное средство по следедующим параметрам: Марка транспортного средства (ТС), модель ТС, год выпуска, VIN-номер.
\n\n
Для экономии времени клиента в заполнении параметрв ТС, нами создана возможность упростить и значительно ускорить создание требуемого вами запроса, чтобы максимально сэкономить время клиента и исключить возможность ошибки при внесении данных. Для этого достаточно сделать/прикрепить фото свидетельства или паспорта транспортного средства, и написать название или приложить фото необходимой запчасти.
\n\n
Хранение информации и доступ к ней:\n
Мы не передаем персональную информацию третьим лицам. Доступ к ней имеют только менеджеры нашей компании. Запись, систематизация, накопление, хранение, уточнение (обновление, изменение), извлечение персональных данных произодится с использованием баз данных, находящихся на территории РФ. Мы предпринимаем все разумные возможности для обеспечения сохранности вашей информации.
	</string>
</resources>
