<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">
	<AutoCompleteTextView
		android:id="@+id/textName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textCapWords"
		android:imeOptions="actionNext"
		android:completionThreshold="1"
		android:maxLines="1"
		android:hint="@string/hintAutoName"
		/>
	<EditText
		android:id="@+id/textVin"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textCapCharacters"
		android:imeOptions="actionNext"
		android:maxLines="1"
		android:hint="@string/hintAutoVin"
		/>
	<EditText
		android:id="@+id/textYear"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:digits="0123456789"
		android:inputType="numberDecimal"
		android:imeOptions="actionNext"
		android:maxLines="1"
		android:hint="@string/hintAutoYear"
		/>
	<EditText
		android:id="@+id/textEngine"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textCapWords"
		android:imeOptions="actionNext"
		android:maxLines="1"
		android:hint="@string/hintAutoEngine"
		/>
	<AutoCompleteTextView
		android:id="@+id/textPart"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textCapWords"
		android:imeOptions="actionNext"
		android:completionThreshold="1"
		android:maxLines="1"
		android:hint="@string/hintAutoPart"
		/>
	<EditText
		android:id="@+id/textComment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textCapSentences"
		android:imeOptions="actionDone"
		android:maxLines="3"
		android:hint="@string/hintComment"
		/>
	<ImageView
		android:id="@+id/image"
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:src="@drawable/camera_128"
		android:scaleType="centerInside"
		android:background="@drawable/image_placeholder_background"
		android:contentDescription="@string/hintImage"
		/>
	<Button
		android:id="@+id/buttonAdd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/buttonAddRequest"
		/>
</LinearLayout>