<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			xmlns:tools="http://schemas.android.com/tools"
			android:orientation="vertical"
			android:background="#434753"
			tools:context="com.nimblemind.autoplus.LoginActivity"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="@dimen/globalActivityPadding"
		>

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/logo"
			android:scaleType="fitXY"
			android:adjustViewBounds="true"
			android:paddingBottom="@dimen/authLogoPagging"
			android:paddingLeft="@dimen/authLogoPagging"
			android:paddingRight="@dimen/authLogoPagging"
			android:contentDescription="@string/app_name"
			/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/authCommonPagging"
			android:textColorHint="@color/authHint"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:textColor="@android:color/white"
				android:hint="@string/hintEmail"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColorHint="@color/authHint"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:inputType="textPassword"
				android:maxLines="1"
				android:textColor="@android:color/white"
				android:hint="@string/hintPassword"
				/>
		</android.support.design.widget.TextInputLayout>

		<TextView
			android:id="@+id/buttonPassRecovery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/authLowerButtonPagging"
			android:text="@string/buttonPassRecovery"
			android:textColor="@color/authHint"
			/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/buttonLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/buttonLogin"
			android:textStyle="bold"
			android:textColor="@android:color/white"
			app:backgroundTint="@color/colorPrimary"
			/>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/buttonSignup"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/buttonGotoSignup"
			android:textColor="@color/authHint"
			android:textStyle="bold"
			android:background="@null"
			/>
	</LinearLayout>
</ScrollView>