<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.nimblemind.autoplus.SignupActivity"
	>

	<View
		android:id="@+id/statusBarSpace"
		android:layout_width="match_parent"
		android:layout_height="24dp"
		android:background="@color/colorPrimary"
		/>

	<include layout="@layout/topbar"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
			 android:layout_below="@+id/statusBarSpace"
			 android:id="@+id/topbar"/>

	<ScrollView
		android:id="@+id/mainContent"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/topbar"
		android:orientation="vertical"
		android:isScrollContainer="false"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="@dimen/globalActivityPadding"
			>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/containerEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/authCommonPagging"
				android:textColorHint="@color/authHint"
				>
				<android.support.design.widget.TextInputEditText
					android:id="@+id/textEmail"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:inputType="textEmailAddress"
					android:imeOptions="actionNext"
					android:maxLines="1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/loginInputTextSize"
					android:hint="@string/hintEmail"
					/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/containerName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/authCommonPagging"
				android:textColorHint="@color/authHint"
				>
				<android.support.design.widget.TextInputEditText
					android:id="@+id/textName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:inputType="textPersonName|textCapWords"
					android:imeOptions="actionNext"
					android:maxLines="1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/loginInputTextSize"
					android:hint="@string/hintName"
					/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/containerPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/authCommonPagging"
				android:textColorHint="@color/authHint"
				>
				<android.support.design.widget.TextInputEditText
					android:id="@+id/textPassword"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:inputType="textPassword"
					android:imeOptions="actionNext"
					android:maxLines="1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/loginInputTextSize"
					android:hint="@string/hintPassword"
					/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/containerPassword2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/authCommonPagging"
				android:textColorHint="@color/authHint"
				>
				<android.support.design.widget.TextInputEditText
					android:id="@+id/textPassword2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:inputType="textPassword"
					android:imeOptions="actionDone"
					android:maxLines="1"
					android:textColor="@android:color/white"
					android:textSize="@dimen/loginInputTextSize"
					android:hint="@string/hintPassCheck"
					/>
			</android.support.design.widget.TextInputLayout>

			<LinearLayout
				android:id="@+id/buttonAgreement"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center"
				android:layout_margin="5dp"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/textUserAgreementInfo"
					android:textColor="@color/authHint"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/textUserAgreement"
					android:textColor="@android:color/white"
					/>
			</LinearLayout>

			<android.support.v7.widget.AppCompatButton
				android:id="@+id/buttonSignup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/buttonSignup"
				android:textStyle="bold"
				android:textColor="@android:color/white"
				app:backgroundTint="@color/colorPrimary"
				/>
		</LinearLayout>
	</ScrollView>

	<com.nimblemind.autoplus.TintedProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:indeterminate="true"
		app:color="@android:color/white"
		android:visibility="gone"
		tools:visibility="visible"
		/>
</RelativeLayout>