<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/globalActivityPadding"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		>
		<EditText
			android:id="@+id/buttonAddPTSPhoto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/hintPTSPhoto"
			android:focusable="false"
			android:drawableRight="@drawable/ic_camera"
			android:hint="@string/hintImage"
			/>
		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout
				android:id="@+id/containerPTSPhotos"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:padding="5dp"
				/>
		</HorizontalScrollView>

		<LinearLayout
			android:id="@+id/containerPartsList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<include layout="@layout/new_part_form"/>
		</LinearLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerComment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:counterEnabled="true"
			app:counterMaxLength="500"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textComment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapSentences"
				android:imeOptions="actionDone"
				android:maxLines="3"
				android:hint="@string/hintComment"
				/>
		</android.support.design.widget.TextInputLayout>
		<EditText
			android:id="@+id/buttonAddImage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/hintImage"
			android:focusable="false"
			android:drawableRight="@drawable/ic_camera"
			android:hint="@string/hintImage"
			/>
		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout
				android:id="@+id/containerPartPhotos"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:padding="5dp"
				/>
		</HorizontalScrollView>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/buttonAdd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="3dp"
			android:text="@string/buttonAddRequest"
			android:textStyle="bold"
			android:textColor="@android:color/white"
			app:backgroundTint="@color/floatingButton"
			/>
	</LinearLayout>
</ScrollView>