<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/globalActivityPadding"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionNext"
				android:maxLines="1"
				android:hint="@string/hintAutoName"
				android:focusable="false"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerYear"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textYear"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="0123456789"
				android:inputType="numberDecimal"
				android:imeOptions="actionNext"
				android:maxLines="1"
				android:hint="@string/hintAutoYear"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerVin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:counterEnabled="true"
			app:counterMaxLength="17"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textVin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapCharacters"
				android:imeOptions="actionNext"
				android:maxLines="1"
				android:hint="@string/hintAutoVin"
				/>
		</android.support.design.widget.TextInputLayout>

		<LinearLayout
			android:id="@+id/containerPartsList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<include layout="@layout/new_part_form"/>
		</LinearLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/containerComment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:counterEnabled="true"
			app:counterMaxLength="500"
			>
			<android.support.design.widget.TextInputEditText
				android:id="@+id/textComment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapSentences"
				android:imeOptions="actionDone"
				android:maxLines="3"
				android:hint="@string/hintComment"
				/>
		</android.support.design.widget.TextInputLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/hintImage"
			/>
		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout
				android:id="@+id/containerPhotosList"
				android:layout_width="match_parent"
				android:layout_height="90dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:padding="5dp"
				>

				<ImageView
					android:id="@+id/buttonAddImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/camera"
					android:padding="5dp"
					android:background="@drawable/image_placeholder_background"
					/>
			</LinearLayout>
		</HorizontalScrollView>

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/buttonAdd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="3dp"
			android:text="@string/buttonAddRequest"
			android:textStyle="bold"
			android:textColor="@android:color/white"
			app:backgroundTint="@color/floatingButton"
			/>
	</LinearLayout>
</ScrollView>