<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:fitsSystemWindows="true"
			  android:background="@color/colorPrimary"
	>

	<include layout="@layout/topbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/recyclerItem"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<TextView
				android:id="@+id/textRequestInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/globalActivityPadding"
				android:textColor="@color/mainNewRequestButton"
				tools:text="01 January, 12:00"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/globalActivityPadding"
				android:paddingLeft="@dimen/globalActivityPadding"
				>
				<TextView
					android:id="@+id/textAutoPart"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					tools:text="@string/hintAutoPart"
					/>
			</LinearLayout>

			<include layout="@layout/default_divider"/>

			<LinearLayout
				android:id="@+id/autoInfoContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="@dimen/globalActivityPadding"
				>

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/asset_car"
					android:paddingRight="@dimen/textDrawableDefaultIndent"
					/>
			</LinearLayout>

			<include layout="@layout/default_divider"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="@dimen/globalActivityPadding"
				>

				<TextView
					android:id="@+id/textComment"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingBottom="@dimen/recyclerItemPadding"
					android:textSize="14sp"
					android:ellipsize="end"
					android:visibility="gone"
					tools:visibility="visible"
					tools:text="@string/hintComment"
					/>

				<HorizontalScrollView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					>
					<LinearLayout
						android:id="@+id/partPhotoContainer"
						android:layout_width="wrap_content"
						android:orientation="horizontal"
						android:layout_height="wrap_content"
						>

					</LinearLayout>
				</HorizontalScrollView>
			</LinearLayout>

			<include layout="@layout/default_divider"/>

			<android.support.v7.widget.AppCompatButton
				android:id="@+id/buttonOpenChat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/globalActivityPadding"
				android:layout_marginTop="@dimen/globalActivityPadding"
				android:text="@string/textNoMessages"
				android:textSize="18sp"
				android:textColor="@android:color/white"
				android:drawableLeft="@drawable/message_bubble_white_empty"
				android:drawablePadding="@dimen/textDrawableDefaultIndent"
				app:backgroundTint="@color/colorPrimary"
				/>
			<TextView
				android:id="@+id/newRequestButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/globalActivityPadding"
				android:layout_marginTop="@dimen/globalActivityPadding"
				android:layout_marginBottom="@dimen/globalActivityPadding"
				android:text="@string/buttonCreateRequestByTemplate"
				android:textColor="@color/mainNewRequestButton"
				android:textSize="15sp"
				/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>